deploy: f646d42da2b65e7101b512986efbcdf89f926b07

--- a/groups/matturu/index.html
+++ b/groups/matturu/index.html
@@ -205,6 +205,9 @@
 <p>Do learned vaidika-s from other regions invite your neighbors for conferences where tough shāstra questions are considered? Do learned practicing brāhmaṇa-s in your neighborhood teach veda-s, shāstra-s and kāvya-s in Sanskrit? Are they able to explain and present tough concepts clearly and concisely to the amazement of savvy skeptical outsiders from the city? Have they compiled and published original books?</p>
 <p><img src="https://i.imgur.com/oY007Xg.jpg" alt="Manuscript">
 <img src="https://i.imgur.com/w43ztkg.jpg" alt="Books"></p>
+<ul>
+<li>मत्तूरु-श्रौत-ग्रन्था मुक्तम् <a href="https://sanskrit.github.io/mattUru-shrauta-book/">अत्रोपलभ्यन्ते</a> ।</li>
+</ul>
 <h3 id="hapiness-and-the-arts">Hapiness and the arts</h3>
 <p><img src="https://i.imgur.com/CWNQub8.jpg" alt="Cows and the street"></p>
 <p>Do you see kids happily play on the street even as they bear shikha-s and wearing dhoti-s? As you walk around your neighborhood, as you make your way around loitering desi cows, can you listen to the chriping of birds, the chanting of the veda-s, the Carnatic classical music, practice of the gamaka art form {<a href="https://youtu.be/anoPN1QMyhM?t=532">YT</a>} and high pitched challenge of the shrauta ritualist?</p>
@@ -423,7 +426,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Jun 6 09:34:15 UTC. (<a href="http://google.com/search?q=09%3a34%3a15%20UTC to IST">IST</a>)
+      Built on 2021 Jun 8 15:25:16 UTC. (<a href="http://google.com/search?q=15%3a25%3a16%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
