deploy: d55d97b7b12d2b47ba2a9ce4f616956e5df68c75

--- a/groups/dyuganga/projects/audio/tips/index.html
+++ b/groups/dyuganga/projects/audio/tips/index.html
@@ -235,7 +235,7 @@ For example, convey the &ldquo;conversational&rdquo; bhAva.</li>
 <ul>
 <li>Pronunciation should be excellent. See &ldquo;Good pronunciation&rdquo; section above.
 <ul>
-<li>We can coach you a bit. <a href="https://goo.gl/htvxdN">Video demos</a>, <a href="http://vvasuki.github.io/sanskrit/shixaa/">शिक्षाभिप्रायः</a></li>
+<li>We can coach you a bit. <a href="https://goo.gl/htvxdN">Video demos</a>, <a href="http://vishvAsa.github.io/sanskrit/shixaa/">शिक्षाभिप्रायः</a></li>
 </ul>
 </li>
 <li>Recording should have no notification sounds, no phone call sounds.</li>
@@ -346,7 +346,7 @@ For example, convey the &ldquo;conversational&rdquo; bhAva.</li>
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Jun 15 01:52:57 UTC. (<a href="http://google.com/search?q=01%3a52%3a57%20UTC to IST">IST</a>)
+      Built on 2021 Jun 16 01:02:00 UTC. (<a href="http://google.com/search?q=01%3a02%3a00%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
