--- a/groups/dyuganga/contact/index.html
+++ b/groups/dyuganga/contact/index.html
@@ -193,7 +193,7 @@
   <div id="post_content">
   <ul>
 <li>Short URL: <a href="https://rebrand.ly/dyugangA">https://rebrand.ly/dyugangA</a></li>
-<li>Please contact <a href="https://vvasuki.github.io/">Vishvas / विश्वासो वासुकिजः</a> for more info. Especially, please see <a href="https://vvasuki.github.io/interests/dharma-via-vishvas/">Dharma via Vishvas page</a>.</li>
+<li>Please contact <a href="https://vishvAsa.github.io/">Vishvas / विश्वासो वासुकिजः</a> for more info. Especially, please see <a href="https://vishvAsa.github.io/interests/dharma-via-vishvas/">Dharma via Vishvas page</a>.</li>
 </ul>
 <h2 id="social-web-updates-and-sponsorship-opportunities">Social web (Updates and sponsorship opportunities)</h2>
 <ul>
@@ -244,7 +244,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Jun 15 01:52:57 UTC. (<a href="http://google.com/search?q=01%3a52%3a57%20UTC to IST">IST</a>)
+      Built on 2021 Jun 16 01:02:00 UTC. (<a href="http://google.com/search?q=01%3a02%3a00%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
