--- a/groups/dyuganga/index.html
+++ b/groups/dyuganga/index.html
@@ -206,11 +206,11 @@
 
 <h2 id="goals-धययन">Goals ध्येयानि</h2>
 <p>Dyugangā is a work group dedicated to the promotion of ever-victorious Hindu ideals and arts. It&rsquo;s current focus is in presenting important texts for easy study.</p>
-<p>The texts may be presented as audio files (eg: <a href="../../projects/audio/mbh-audio/">MahAbhArata audio book project</a>), as web pages (eg: <a href="https://vvasuki.github.io/saMskAra/mantraH/misc-devas/paravastu-saama/Aruhan/?debugInfo=%22urlWeight=1&amp;totalWeight=67%22">V&rsquo;s mantra notes</a>, <a href="https://vvasuki.github.io/vedAH/taittirIyam/sUtram/ApastambaH/gRhyam/ekAgnikANDam/haradatta-TIkA/">EkAgnikANDa commentary</a>), as dictionaries (eg: <a href="https://sanskrit-coders.github.io/dictionaries/offline/">stardict</a>). Check out our <a href="https://trello.com/b/d4dANdrD/%E0%A4%A6%E0%A5%8D%E0%A4%AF%E0%A5%81%E0%A4%97%E0%A4%99%E0%A5%8D%E0%A4%97%E0%A4%BE-dyuganga">trello board</a> for a more fine grained listing.</p>
+<p>The texts may be presented as audio files (eg: <a href="../../projects/audio/mbh-audio/">MahAbhArata audio book project</a>), as web pages (eg: <a href="https://vishvAsa.github.io/saMskAra/mantraH/misc-devas/paravastu-saama/Aruhan/?debugInfo=%22urlWeight=1&amp;totalWeight=67%22">V&rsquo;s mantra notes</a>, <a href="https://vishvAsa.github.io/vedAH/taittirIyam/sUtram/ApastambaH/gRhyam/ekAgnikANDam/haradatta-TIkA/">EkAgnikANDa commentary</a>), as dictionaries (eg: <a href="https://sanskrit-coders.github.io/dictionaries/offline/">stardict</a>). Check out our <a href="https://trello.com/b/d4dANdrD/%E0%A4%A6%E0%A5%8D%E0%A4%AF%E0%A5%81%E0%A4%97%E0%A4%99%E0%A5%8D%E0%A4%97%E0%A4%BE-dyuganga">trello board</a> for a more fine grained listing.</p>
 <p>The choice of material is heavily depends on the special interests of its current lead (vedas, kalpa, purANa-s).</p>
 <h3 id="ससकतनवद">संस्कृतानुवादः</h3>
 <p>द्युगङ्गा नाम कार्यसंस्था ऽजेयानां भारतीयपुरुषार्थपरिकल्पनानाञ्च हिन्दुककलानाञ्च प्रसारणाय वर्तते। तदीयस् स्थूलोद्देशोऽधुना प्रमुखग्रन्थानाम् अध्ययनसौकर्याय प्रस्तुतिः। ततो ग्रन्थसङ्कलनकेन्द्रम् इति वक्तुमलम्।</p>
-<p>ग्रन्थानाम् प्रस्तुतिर् ध्वनिसञ्चिकाभिस् स्यात् (यथा <a href="../../projects/audio/mbh-audio/">महाभारतपारायणप्रसारणे</a>), जालक्षेत्रपृष्ठैर् वा (यथा <a href="https://vvasuki.github.io/saMskAra/mantra/agniH/paravastu-saama/mahAvaishvAnara-vratam/">विश्वासस्य मन्त्रटिप्पनीषु</a>, <a href="https://sa.wikisource.org/s/1vnh">एकाग्निकाण्डटीकापृष्ठे विकिस्रोतसि</a>), शब्दकोशैर् वाऽपि (<a href="https://sanskrit-coders.github.io/dictionaries/offline/">stardict</a>)।</p>
+<p>ग्रन्थानाम् प्रस्तुतिर् ध्वनिसञ्चिकाभिस् स्यात् (यथा <a href="../../projects/audio/mbh-audio/">महाभारतपारायणप्रसारणे</a>), जालक्षेत्रपृष्ठैर् वा (यथा <a href="https://vishvAsa.github.io/saMskAra/mantra/agniH/paravastu-saama/mahAvaishvAnara-vratam/">विश्वासस्य मन्त्रटिप्पनीषु</a>, <a href="https://sa.wikisource.org/s/1vnh">एकाग्निकाण्डटीकापृष्ठे विकिस्रोतसि</a>), शब्दकोशैर् वाऽपि (<a href="https://sanskrit-coders.github.io/dictionaries/offline/">stardict</a>)।</p>
 <p>सद्यश्च ग्रन्थाः संस्थाग्रण्या रुचिविशेषम् अनुसृत्य चिताः - वेदाः, इतिहासपुराणानि, कल्पवेदाङ्गग्रन्थाश् चेति।</p>
 <h2 id="establishment-ससथपनम">Establishment संस्थापनम्</h2>
 <p>The group started semi-formally in Feb 2020. It was hosted for a couple of months before the Wuhan pandemic under the aegis of shrI manjunath&rsquo;s <a href="http://cleverkare.com">Cleverkare</a>, an entirely unrelated business. Since then it has been running mostly on Vishvas family funds.</p>
@@ -1760,7 +1760,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Jun 15 01:52:57 UTC. (<a href="http://google.com/search?q=01%3a52%3a57%20UTC to IST">IST</a>)
+      Built on 2021 Jun 16 01:02:00 UTC. (<a href="http://google.com/search?q=01%3a02%3a00%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
