--- a/groups/dyuganga/members/index.html
+++ b/groups/dyuganga/members/index.html
@@ -192,7 +192,7 @@
   </aside>
   <div id="post_content">
   <ul>
-<li><a href="https://vvasuki.github.io/">Vishvas / विश्वासो वासुकिजः</a>, Lead/ अग्रणीः
+<li><a href="https://vishvAsa.github.io/">Vishvas / विश्वासो वासुकिजः</a>, Lead/ अग्रणीः
 <ul>
 <li>Apart from Dyugangā activity, he also contributes to free open source software useful for Hindu practitioners, scholars and students - see various repos under orgs such as <a href="https://github.com/sanskrit-coders/">sanskrit-programmers</a>, <a href="https://github.com/jyotiSham/">jyotisha</a>, <a href="https://github.com/indic-dict/">indic-dict</a> etc. (Full list under github <a href="https://github.com/vvasuki/">profile</a>).</li>
 </ul>
@@ -242,7 +242,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Jun 15 01:52:57 UTC. (<a href="http://google.com/search?q=01%3a52%3a57%20UTC to IST">IST</a>)
+      Built on 2021 Jun 16 01:02:00 UTC. (<a href="http://google.com/search?q=01%3a02%3a00%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
