--- a/groups/dyuganga/projects/text/proofreading/completed/Apastamba-gRhya-sUtra-commentaries/index.html
+++ b/groups/dyuganga/projects/text/proofreading/completed/Apastamba-gRhya-sUtra-commentaries/index.html
@@ -20,7 +20,7 @@
 
     <meta property="og:title" content="Apastamba gRhya sUtra commentaries" />
 <meta property="og:description" content="Status Completed, with partial support from shrI harikiraN of Indic academy.
-Proposed work I wanted to get typed AnAkulA and tAtparyadarshanI commentaries to Apastamba gRhyasUtra to an error-free state. The pdf is available on archive.org. Well, it was typed up by someone a long time ago (and I had published it in wikisource a long time ago), but that version has many errors and that makes it irritating to read. In the end, it will be presented like this: https://vvasuki." />
+Proposed work I wanted to get typed AnAkulA and tAtparyadarshanI commentaries to Apastamba gRhyasUtra to an error-free state. The pdf is available on archive.org. Well, it was typed up by someone a long time ago (and I had published it in wikisource a long time ago), but that version has many errors and that makes it irritating to read. In the end, it will be presented like this: https://vishvAsa." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://sanskrit.github.io/groups/dyuganga/projects/text/proofreading/completed/Apastamba-gRhya-sUtra-commentaries/" /><meta property="article:section" content="groups" />
 
@@ -28,13 +28,13 @@ Proposed work I wanted to get typed AnAkulA and tAtparyadarshanI commentaries to
 
 <meta itemprop="name" content="Apastamba gRhya sUtra commentaries">
 <meta itemprop="description" content="Status Completed, with partial support from shrI harikiraN of Indic academy.
-Proposed work I wanted to get typed AnAkulA and tAtparyadarshanI commentaries to Apastamba gRhyasUtra to an error-free state. The pdf is available on archive.org. Well, it was typed up by someone a long time ago (and I had published it in wikisource a long time ago), but that version has many errors and that makes it irritating to read. In the end, it will be presented like this: https://vvasuki.">
+Proposed work I wanted to get typed AnAkulA and tAtparyadarshanI commentaries to Apastamba gRhyasUtra to an error-free state. The pdf is available on archive.org. Well, it was typed up by someone a long time ago (and I had published it in wikisource a long time ago), but that version has many errors and that makes it irritating to read. In the end, it will be presented like this: https://vishvAsa.">
 
 <meta itemprop="wordCount" content="306">
 <meta itemprop="keywords" content="" /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Apastamba gRhya sUtra commentaries"/>
 <meta name="twitter:description" content="Status Completed, with partial support from shrI harikiraN of Indic academy.
-Proposed work I wanted to get typed AnAkulA and tAtparyadarshanI commentaries to Apastamba gRhyasUtra to an error-free state. The pdf is available on archive.org. Well, it was typed up by someone a long time ago (and I had published it in wikisource a long time ago), but that version has many errors and that makes it irritating to read. In the end, it will be presented like this: https://vvasuki."/>
+Proposed work I wanted to get typed AnAkulA and tAtparyadarshanI commentaries to Apastamba gRhyasUtra to an error-free state. The pdf is available on archive.org. Well, it was typed up by someone a long time ago (and I had published it in wikisource a long time ago), but that version has many errors and that makes it irritating to read. In the end, it will be presented like this: https://vishvAsa."/>
 
       
     
@@ -197,12 +197,12 @@ Proposed work I wanted to get typed AnAkulA and tAtparyadarshanI commentaries to
   <h2 id="status">Status</h2>
 <p>Completed, with partial support from shrI harikiraN of Indic academy.</p>
 <h2 id="proposed-work">Proposed work</h2>
-<p>I wanted to get typed AnAkulA and tAtparyadarshanI commentaries to Apastamba gRhyasUtra to an  error-free state. The pdf is available on <a href="https://archive.org/stream/APASTHAMBAGRUHYASUTRAMSUDARSHANAHARADATHA/APASTHAMBA%20GRUHYASUTRAM%20%28SUDARSHANA%2CHARADATHA%29#page/n31/mode/2up">archive.org</a>. Well, it was typed up by someone a long time ago (and I had published it in <a href="https://sa.wikisource.org/wiki/%E0%A4%86%E0%A4%AA%E0%A4%B8%E0%A5%8D%E0%A4%A4%E0%A4%AE%E0%A5%8D%E0%A4%AC_%E0%A4%97%E0%A5%83%E0%A4%B9%E0%A5%8D%E0%A4%AF%E0%A4%B8%E0%A5%82%E0%A4%A4%E0%A5%8D%E0%A4%B0%E0%A4%BE%E0%A4%A3%E0%A4%BF,_%E0%A4%B9%E0%A4%B0%E0%A4%A6%E0%A4%A4%E0%A5%8D%E0%A4%A4%E0%A4%B8%E0%A5%8D%E0%A4%AF_%E0%A4%85%E0%A4%A8%E0%A5%81%E0%A4%95%E0%A5%82%E0%A4%B2%E0%A4%BE,_%E0%A4%B8%E0%A5%81%E0%A4%A6%E0%A4%B0%E0%A5%8D%E0%A4%B6%E0%A4%A8%E0%A4%B8%E0%A5%82%E0%A4%B0%E0%A5%87%E0%A4%83_%E0%A4%A4%E0%A4%BE%E0%A4%A4%E0%A5%8D%E0%A4%AA%E0%A4%B0%E0%A5%8D%E0%A4%AF%E0%A4%A6%E0%A4%B0%E0%A5%8D%E0%A4%B6%E0%A4%A8%E0%A4%AE%E0%A5%8D_%E0%A4%9A">wikisource a long time ago</a>), but that version has many errors and that makes it irritating to read. In the end, it will be presented like this: <a href="https://vvasuki.github.io/vedAH/taittirIyam/sUtram/ApastambaH/gRhyam/TIkA/17_07/">https://vvasuki.github.io/vedAH/taittirIyam/sUtram/ApastambaH/gRhyam/TIkA/17_07/</a>  (besides the <a href="https://github.com/vvasuki/vedAH/blob/master/content/taittirIyam/sUtram/ApastambaH/gRhyam/TIkA/17_07.md">plain text markdown</a>), and needless to say - anyone will be welcome to access, use, copy, publish it however they like.</p>
+<p>I wanted to get typed AnAkulA and tAtparyadarshanI commentaries to Apastamba gRhyasUtra to an  error-free state. The pdf is available on <a href="https://archive.org/stream/APASTHAMBAGRUHYASUTRAMSUDARSHANAHARADATHA/APASTHAMBA%20GRUHYASUTRAM%20%28SUDARSHANA%2CHARADATHA%29#page/n31/mode/2up">archive.org</a>. Well, it was typed up by someone a long time ago (and I had published it in <a href="https://sa.wikisource.org/wiki/%E0%A4%86%E0%A4%AA%E0%A4%B8%E0%A5%8D%E0%A4%A4%E0%A4%AE%E0%A5%8D%E0%A4%AC_%E0%A4%97%E0%A5%83%E0%A4%B9%E0%A5%8D%E0%A4%AF%E0%A4%B8%E0%A5%82%E0%A4%A4%E0%A5%8D%E0%A4%B0%E0%A4%BE%E0%A4%A3%E0%A4%BF,_%E0%A4%B9%E0%A4%B0%E0%A4%A6%E0%A4%A4%E0%A5%8D%E0%A4%A4%E0%A4%B8%E0%A5%8D%E0%A4%AF_%E0%A4%85%E0%A4%A8%E0%A5%81%E0%A4%95%E0%A5%82%E0%A4%B2%E0%A4%BE,_%E0%A4%B8%E0%A5%81%E0%A4%A6%E0%A4%B0%E0%A5%8D%E0%A4%B6%E0%A4%A8%E0%A4%B8%E0%A5%82%E0%A4%B0%E0%A5%87%E0%A4%83_%E0%A4%A4%E0%A4%BE%E0%A4%A4%E0%A5%8D%E0%A4%AA%E0%A4%B0%E0%A5%8D%E0%A4%AF%E0%A4%A6%E0%A4%B0%E0%A5%8D%E0%A4%B6%E0%A4%A8%E0%A4%AE%E0%A5%8D_%E0%A4%9A">wikisource a long time ago</a>), but that version has many errors and that makes it irritating to read. In the end, it will be presented like this: <a href="https://vishvAsa.github.io/vedAH/taittirIyam/sUtram/ApastambaH/gRhyam/TIkA/17_07/">https://vishvAsa.github.io/vedAH/taittirIyam/sUtram/ApastambaH/gRhyam/TIkA/17_07/</a>  (besides the <a href="https://github.com/vvasuki/vedAH/blob/master/content/taittirIyam/sUtram/ApastambaH/gRhyam/TIkA/17_07.md">plain text markdown</a>), and needless to say - anyone will be welcome to access, use, copy, publish it however they like.</p>
 <h2 id="estimated-cost">Estimated cost</h2>
 <p>I&rsquo;ll get it done by a learned gentleman I&rsquo;ve been employing for much of the past year (for fixing taittirIya saMhitA commentary and such). He&rsquo;s very capable (I will supervise). I pay him by the hour (x Rs) - I was wondering if you could foot the bill for this work. I can keep track of the time he spends and let you know - so that you can transfer the money directly. Off the top of my head, I estimate that it will him a month to accomplish the task - that comes to about 40k Rs.</p>
 <h2 id="past-experience">Past experience</h2>
 <p>examples:<br>
-- <a href="https://vvasuki.github.io/vedAH/taittirIyam/sUtram/hiraNyakeshI/paddhatiH/saMskAraratnamAlA/">https://vvasuki.github.io/vedAH/taittirIyam/sUtram/hiraNyakeshI/paddhatiH/saMskAraratnamAlA/</a>  - saMskAraratnamAlA, an excellent KYV paddhati text especially popular in mahArAShTra (albeit belonging to the closely related hiraNyakeshI sUtra). This was executed by saMskRtabhAratI people (at their expense) after I suggested the text to them.
+- <a href="https://vishvAsa.github.io/vedAH/taittirIyam/sUtram/hiraNyakeshI/paddhatiH/saMskAraratnamAlA/">https://vishvAsa.github.io/vedAH/taittirIyam/sUtram/hiraNyakeshI/paddhatiH/saMskAraratnamAlA/</a>  - saMskAraratnamAlA, an excellent KYV paddhati text especially popular in mahArAShTra (albeit belonging to the closely related hiraNyakeshI sUtra). This was executed by saMskRtabhAratI people (at their expense) after I suggested the text to them.
 - Ongoing work pertaining to SC Vasu&rsquo;s commentary on aShTAdhyAyI ( example <a href="https://ashtadhyayi.github.io/sutra-details/?sutra=1.1.6">here</a> ), sponsored by shrI nIlesh of <a href="http://ashyadhyayi.com">ashyadhyayi.com</a> .</p>
 <h2 id="importance-of-the-work">Importance of the work</h2>
 <p>I frequently refer to it for planning saMskAra-s in my household, and presumably it will similarly be the case for a good majority of south Indian brAhmaNas. Flowing text will be far better than pdfs or physical books.</p>
@@ -243,7 +243,7 @@ Proposed work I wanted to get typed AnAkulA and tAtparyadarshanI commentaries to
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Jun 15 01:52:57 UTC. (<a href="http://google.com/search?q=01%3a52%3a57%20UTC to IST">IST</a>)
+      Built on 2021 Jun 16 01:02:00 UTC. (<a href="http://google.com/search?q=01%3a02%3a00%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
