--- a/groups/dyuganga/projects/text/proofreading/mbh-gItA-press_present-with-audio/index.html
+++ b/groups/dyuganga/projects/text/proofreading/mbh-gItA-press_present-with-audio/index.html
@@ -20,7 +20,7 @@
 
     <meta property="og:title" content="mahAbhArata gItA press - present with audio" />
 <meta property="og:description" content="Goal Digitize and present the text of the mahAbhArata edition so laboriously and wonderfully recorded as part of this project - together with the audio. The text will (just like our audio files) be made available for free in markdown format - anyone can copy and reuse. Examples of such text with audio presentations:
- rAmAyaNa https://vvasuki.github.io/purANam/rAmAyaNam/AndhrapAThaH/1_bAlakANDam/01-kathAmukham/001_sanxepa/ raghuvaMsha https://vvasuki.github.io/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/01/ kumArasambhava https://vvasuki.github.io/kAvyam/TIkA/padyam/kAlidAsaH/kumArasambhavam/02/ durgA saptashatI https://vvasuki.github.io/purANam/durgA-saptashatI/01-prathama-charitam/ rAmacharitamAnasa https://vvasuki.github.io/kAvyam/TIkA/padyam/purANam/rAmacharitamAnasa-TIkA/02_ayodhyAkANDa/ nArAyaNIyam https://vvasuki.github.io/kAvyam/TIkA/padyam/purANam/nArAyaNIyam/003/ several sAmans etc." />
+ rAmAyaNa https://vishvAsa.github.io/purANam/rAmAyaNam/AndhrapAThaH/1_bAlakANDam/01-kathAmukham/001_sanxepa/ raghuvaMsha https://vishvAsa.github.io/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/01/ kumArasambhava https://vishvAsa.github.io/kAvyam/TIkA/padyam/kAlidAsaH/kumArasambhavam/02/ durgA saptashatI https://vishvAsa.github.io/purANam/durgA-saptashatI/01-prathama-charitam/ rAmacharitamAnasa https://vishvAsa.github.io/kAvyam/TIkA/padyam/purANam/rAmacharitamAnasa-TIkA/02_ayodhyAkANDa/ nArAyaNIyam https://vishvAsa.github.io/kAvyam/TIkA/padyam/purANam/nArAyaNIyam/003/ several sAmans etc." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://sanskrit.github.io/groups/dyuganga/projects/text/proofreading/mbh-gItA-press_present-with-audio/" /><meta property="article:section" content="groups" />
 
@@ -28,13 +28,13 @@
 
 <meta itemprop="name" content="mahAbhArata gItA press - present with audio">
 <meta itemprop="description" content="Goal Digitize and present the text of the mahAbhArata edition so laboriously and wonderfully recorded as part of this project - together with the audio. The text will (just like our audio files) be made available for free in markdown format - anyone can copy and reuse. Examples of such text with audio presentations:
- rAmAyaNa https://vvasuki.github.io/purANam/rAmAyaNam/AndhrapAThaH/1_bAlakANDam/01-kathAmukham/001_sanxepa/ raghuvaMsha https://vvasuki.github.io/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/01/ kumArasambhava https://vvasuki.github.io/kAvyam/TIkA/padyam/kAlidAsaH/kumArasambhavam/02/ durgA saptashatI https://vvasuki.github.io/purANam/durgA-saptashatI/01-prathama-charitam/ rAmacharitamAnasa https://vvasuki.github.io/kAvyam/TIkA/padyam/purANam/rAmacharitamAnasa-TIkA/02_ayodhyAkANDa/ nArAyaNIyam https://vvasuki.github.io/kAvyam/TIkA/padyam/purANam/nArAyaNIyam/003/ several sAmans etc.">
+ rAmAyaNa https://vishvAsa.github.io/purANam/rAmAyaNam/AndhrapAThaH/1_bAlakANDam/01-kathAmukham/001_sanxepa/ raghuvaMsha https://vishvAsa.github.io/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/01/ kumArasambhava https://vishvAsa.github.io/kAvyam/TIkA/padyam/kAlidAsaH/kumArasambhavam/02/ durgA saptashatI https://vishvAsa.github.io/purANam/durgA-saptashatI/01-prathama-charitam/ rAmacharitamAnasa https://vishvAsa.github.io/kAvyam/TIkA/padyam/purANam/rAmacharitamAnasa-TIkA/02_ayodhyAkANDa/ nArAyaNIyam https://vishvAsa.github.io/kAvyam/TIkA/padyam/purANam/nArAyaNIyam/003/ several sAmans etc.">
 
 <meta itemprop="wordCount" content="161">
 <meta itemprop="keywords" content="" /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="mahAbhArata gItA press - present with audio"/>
 <meta name="twitter:description" content="Goal Digitize and present the text of the mahAbhArata edition so laboriously and wonderfully recorded as part of this project - together with the audio. The text will (just like our audio files) be made available for free in markdown format - anyone can copy and reuse. Examples of such text with audio presentations:
- rAmAyaNa https://vvasuki.github.io/purANam/rAmAyaNam/AndhrapAThaH/1_bAlakANDam/01-kathAmukham/001_sanxepa/ raghuvaMsha https://vvasuki.github.io/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/01/ kumArasambhava https://vvasuki.github.io/kAvyam/TIkA/padyam/kAlidAsaH/kumArasambhavam/02/ durgA saptashatI https://vvasuki.github.io/purANam/durgA-saptashatI/01-prathama-charitam/ rAmacharitamAnasa https://vvasuki.github.io/kAvyam/TIkA/padyam/purANam/rAmacharitamAnasa-TIkA/02_ayodhyAkANDa/ nArAyaNIyam https://vvasuki.github.io/kAvyam/TIkA/padyam/purANam/nArAyaNIyam/003/ several sAmans etc."/>
+ rAmAyaNa https://vishvAsa.github.io/purANam/rAmAyaNam/AndhrapAThaH/1_bAlakANDam/01-kathAmukham/001_sanxepa/ raghuvaMsha https://vishvAsa.github.io/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/01/ kumArasambhava https://vishvAsa.github.io/kAvyam/TIkA/padyam/kAlidAsaH/kumArasambhavam/02/ durgA saptashatI https://vishvAsa.github.io/purANam/durgA-saptashatI/01-prathama-charitam/ rAmacharitamAnasa https://vishvAsa.github.io/kAvyam/TIkA/padyam/purANam/rAmacharitamAnasa-TIkA/02_ayodhyAkANDa/ nArAyaNIyam https://vishvAsa.github.io/kAvyam/TIkA/padyam/purANam/nArAyaNIyam/003/ several sAmans etc."/>
 
       
     
@@ -197,12 +197,12 @@
   <h2 id="goal">Goal</h2>
 <p>Digitize and present the text of the mahAbhArata edition so laboriously and wonderfully recorded as part of this project - together with the audio. The text will (just like our audio files) be made available for free in markdown format - anyone can copy and reuse. Examples of such text with audio presentations:</p>
 <ul>
-<li>rAmAyaNa <a href="https://vvasuki.github.io/purANam/rAmAyaNam/AndhrapAThaH/1_bAlakANDam/01-kathAmukham/001_sanxepa/">https://vvasuki.github.io/purANam/rAmAyaNam/AndhrapAThaH/1_bAlakANDam/01-kathAmukham/001_sanxepa/</a></li>
-<li>raghuvaMsha <a href="https://vvasuki.github.io/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/01/">https://vvasuki.github.io/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/01/</a></li>
-<li>kumArasambhava <a href="https://vvasuki.github.io/kAvyam/TIkA/padyam/kAlidAsaH/kumArasambhavam/02/">https://vvasuki.github.io/kAvyam/TIkA/padyam/kAlidAsaH/kumArasambhavam/02/</a></li>
-<li>durgA saptashatI <a href="https://vvasuki.github.io/purANam/durgA-saptashatI/01-prathama-charitam/">https://vvasuki.github.io/purANam/durgA-saptashatI/01-prathama-charitam/</a></li>
-<li>rAmacharitamAnasa <a href="https://vvasuki.github.io/kAvyam/TIkA/padyam/purANam/rAmacharitamAnasa-TIkA/02_ayodhyAkANDa/">https://vvasuki.github.io/kAvyam/TIkA/padyam/purANam/rAmacharitamAnasa-TIkA/02_ayodhyAkANDa/</a></li>
-<li>nArAyaNIyam <a href="https://vvasuki.github.io/kAvyam/TIkA/padyam/purANam/nArAyaNIyam/003/">https://vvasuki.github.io/kAvyam/TIkA/padyam/purANam/nArAyaNIyam/003/</a></li>
+<li>rAmAyaNa <a href="https://vishvAsa.github.io/purANam/rAmAyaNam/AndhrapAThaH/1_bAlakANDam/01-kathAmukham/001_sanxepa/">https://vishvAsa.github.io/purANam/rAmAyaNam/AndhrapAThaH/1_bAlakANDam/01-kathAmukham/001_sanxepa/</a></li>
+<li>raghuvaMsha <a href="https://vishvAsa.github.io/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/01/">https://vishvAsa.github.io/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/01/</a></li>
+<li>kumArasambhava <a href="https://vishvAsa.github.io/kAvyam/TIkA/padyam/kAlidAsaH/kumArasambhavam/02/">https://vishvAsa.github.io/kAvyam/TIkA/padyam/kAlidAsaH/kumArasambhavam/02/</a></li>
+<li>durgA saptashatI <a href="https://vishvAsa.github.io/purANam/durgA-saptashatI/01-prathama-charitam/">https://vishvAsa.github.io/purANam/durgA-saptashatI/01-prathama-charitam/</a></li>
+<li>rAmacharitamAnasa <a href="https://vishvAsa.github.io/kAvyam/TIkA/padyam/purANam/rAmacharitamAnasa-TIkA/02_ayodhyAkANDa/">https://vishvAsa.github.io/kAvyam/TIkA/padyam/purANam/rAmacharitamAnasa-TIkA/02_ayodhyAkANDa/</a></li>
+<li>nArAyaNIyam <a href="https://vishvAsa.github.io/kAvyam/TIkA/padyam/purANam/nArAyaNIyam/003/">https://vishvAsa.github.io/kAvyam/TIkA/padyam/purANam/nArAyaNIyam/003/</a></li>
 <li>several sAmans etc..</li>
 </ul>
 <h2 id="estimated-cost">Estimated cost</h2>
@@ -244,7 +244,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Jun 15 01:52:57 UTC. (<a href="http://google.com/search?q=01%3a52%3a57%20UTC to IST">IST</a>)
+      Built on 2021 Jun 16 01:02:00 UTC. (<a href="http://google.com/search?q=01%3a02%3a00%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
