--- a/groups/dyuganga/internal/onboarding/index.html
+++ b/groups/dyuganga/internal/onboarding/index.html
@@ -28,7 +28,7 @@
 <meta itemprop="name" content="कार्यारम्भः Onboarding">
 <meta itemprop="description" content="कार्यान्तराणि  भवनपरिचयः सङ्गणकप्रवेशः नियमसूचनम्  लेखास् स्रष्टव्याः  सङ्गणकयन्त्रे github team trello team, trello board jibble: नियामक आमन्त्रयति। telegram  सङ्गणकापेक्षा  8GB RAM, fast processor (i5 or later) and laptop preferred  Repositories  संस्कारः - Fork and clone. काव्यम् - Fork and clone. Raw etexts - clone.  सङ्गणकतन्त्रांशाः (Linux)  Install Manjaro via Architect installer yay -S dyuganga  साङ्गणकतन्त्रांशाः (Windows) Editing tools  Bhasha IME - C:\Program Files\ इत्यस्मिन् स्थाप्यन्ताम्। Git for windows Intellij IDE Community edition ।  Setup theme, font size, font.">
 
-<meta itemprop="wordCount" content="88">
+<meta itemprop="wordCount" content="93">
 <meta itemprop="keywords" content="" /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="कार्यारम्भः Onboarding"/>
 <meta name="twitter:description" content="कार्यान्तराणि  भवनपरिचयः सङ्गणकप्रवेशः नियमसूचनम्  लेखास् स्रष्टव्याः  सङ्गणकयन्त्रे github team trello team, trello board jibble: नियामक आमन्त्रयति। telegram  सङ्गणकापेक्षा  8GB RAM, fast processor (i5 or later) and laptop preferred  Repositories  संस्कारः - Fork and clone. काव्यम् - Fork and clone. Raw etexts - clone.  सङ्गणकतन्त्रांशाः (Linux)  Install Manjaro via Architect installer yay -S dyuganga  साङ्गणकतन्त्रांशाः (Windows) Editing tools  Bhasha IME - C:\Program Files\ इत्यस्मिन् स्थाप्यन्ताम्। Git for windows Intellij IDE Community edition ।  Setup theme, font size, font."/>
@@ -230,6 +230,8 @@
 <li>Setup theme, font size, font.</li>
 </ul>
 </li>
+<li><a href="https://github.com/gohugoio/hugo/releases">hugo</a> इत्यस्मात् hugo_0.xx.x_Windows-64bit.zip
+इत्यादिकं स्थापयेत्।</li>
 </ul>
 <h4 id="multimedia">Multimedia</h4>
 <ul>
@@ -281,7 +283,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Jun 16 02:49:50 UTC. (<a href="http://google.com/search?q=02%3a49%3a50%20UTC to IST">IST</a>)
+      Built on 2021 Jul 3 15:55:25 UTC. (<a href="http://google.com/search?q=15%3a55%3a25%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
