--- a/groups/matturu/contribute/veda-shaalaa/index.html
+++ b/groups/matturu/contribute/veda-shaalaa/index.html
@@ -270,7 +270,7 @@ Research and publication The talent of the village is capable serious research a
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Jul 9 09:30:19 UTC. (<a href="http://google.com/search?q=09%3a30%3a19%20UTC to IST">IST</a>)
+      <a href=""><img src=""> Built </a> on 2021 Jul 21 15:39:11 UTC. (<a href="http://google.com/search?q=15%3a39%3a11%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
