deploy: d744b8c29847ba23c75ecb3fa00ac8c61ce3bf73

--- a/groups/dyuganga/projects/text/proofreading/kramaH/index.html
+++ b/groups/dyuganga/projects/text/proofreading/kramaH/index.html
@@ -19,19 +19,25 @@
     <link href="/groups/dyuganga/projects/text/proofreading/kramaH/" rel="feed" type="application/rss+xml" title="संस्कृतजालक्षेत्रम्" />
 
     <meta property="og:title" content="क्रमः" />
-<meta property="og:description" content="प्रस्तुतौ मुख्यध्येयम्  markdown सञ्चिकाभिः (ततश् च ) प्रस्तुतिर् इष्यते ग्रन्थानाम्। तेन, जनितानां markdown सञ्चिकानाम् hugo इत्यादिभिः परीक्षणम् इष्यते।  पादटिप्पन्यः   footnotes-example   पुस्तकेष्व् एवम् पादटिप्पनीः पृष्ठपादेषु स्थाप्येरन्। नैवम् अत्र। उचितस्थानेषु प्रापणीयाः। यथाऽत्र - (१) इत्यस्य सम्बन्ध आदिमश्लोकेनास्ति। तावत् तत्रैव स्थापनीयम्। न कदाचिद् अपि पादटिप्पनीभिर् वाक्यं छिद्येत - यथाऽत्र &ldquo;तत्र प्रवृत्तिप्रयोजनो विधि:-(४) सन्ध्याेश्च&rdquo; इत्यादिकं वाक्यं छिन्नम्। तद् वाक्यखण्डम् अग्रे सारयतु। तत्सम्बद्धाम् अपि ४. आप० ध० १.३०.८. इति पादटिप्पनीम्।" />
+<meta property="og:description" content="प्रस्तुतौ मुख्यध्येयम्  markdown सञ्चिकाभिः (ततश् च ) प्रस्तुतिर् इष्यते ग्रन्थानाम्। तेन, जनितानां markdown सञ्चिकानाम् hugo इत्यादिभिः परीक्षणम् इष्यते।  पादटिप्पन्यः   footnotes-example   पुस्तकेष्व् एवम् पादटिप्पनीः पृष्ठपादेषु स्थाप्येरन्। नैवम् अत्र। उचितस्थानेषु प्रापणीयाः - यथा paragraph-अन्ते।
+यथाऽत्र दर्शिते चित्रे - (१) इत्यस्य सम्बन्ध आदिमश्लोकेनास्ति। तावत् तत्रैव स्थापनीयम्।
+न कदाचिद् अपि पादटिप्पनीभिर् वाक्यं छिद्येत - यथाऽत्र दर्शिते चित्रे &ldquo;तत्र प्रवृत्तिप्रयोजनो विधि:-(४) सन्ध्याेश्च&rdquo; इत्यादिकं वाक्यं छिन्नम्। तद् वाक्यखण्डम् अग्रे सारयतु। तत्सम्बद्धाम् अपि ४." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://sanskrit.github.io/groups/dyuganga/projects/text/proofreading/kramaH/" /><meta property="article:section" content="groups" />
 
 
 
 <meta itemprop="name" content="क्रमः">
-<meta itemprop="description" content="प्रस्तुतौ मुख्यध्येयम्  markdown सञ्चिकाभिः (ततश् च ) प्रस्तुतिर् इष्यते ग्रन्थानाम्। तेन, जनितानां markdown सञ्चिकानाम् hugo इत्यादिभिः परीक्षणम् इष्यते।  पादटिप्पन्यः   footnotes-example   पुस्तकेष्व् एवम् पादटिप्पनीः पृष्ठपादेषु स्थाप्येरन्। नैवम् अत्र। उचितस्थानेषु प्रापणीयाः। यथाऽत्र - (१) इत्यस्य सम्बन्ध आदिमश्लोकेनास्ति। तावत् तत्रैव स्थापनीयम्। न कदाचिद् अपि पादटिप्पनीभिर् वाक्यं छिद्येत - यथाऽत्र &ldquo;तत्र प्रवृत्तिप्रयोजनो विधि:-(४) सन्ध्याेश्च&rdquo; इत्यादिकं वाक्यं छिन्नम्। तद् वाक्यखण्डम् अग्रे सारयतु। तत्सम्बद्धाम् अपि ४. आप० ध० १.३०.८. इति पादटिप्पनीम्।">
+<meta itemprop="description" content="प्रस्तुतौ मुख्यध्येयम्  markdown सञ्चिकाभिः (ततश् च ) प्रस्तुतिर् इष्यते ग्रन्थानाम्। तेन, जनितानां markdown सञ्चिकानाम् hugo इत्यादिभिः परीक्षणम् इष्यते।  पादटिप्पन्यः   footnotes-example   पुस्तकेष्व् एवम् पादटिप्पनीः पृष्ठपादेषु स्थाप्येरन्। नैवम् अत्र। उचितस्थानेषु प्रापणीयाः - यथा paragraph-अन्ते।
+यथाऽत्र दर्शिते चित्रे - (१) इत्यस्य सम्बन्ध आदिमश्लोकेनास्ति। तावत् तत्रैव स्थापनीयम्।
+न कदाचिद् अपि पादटिप्पनीभिर् वाक्यं छिद्येत - यथाऽत्र दर्शिते चित्रे &ldquo;तत्र प्रवृत्तिप्रयोजनो विधि:-(४) सन्ध्याेश्च&rdquo; इत्यादिकं वाक्यं छिन्नम्। तद् वाक्यखण्डम् अग्रे सारयतु। तत्सम्बद्धाम् अपि ४.">
 
-<meta itemprop="wordCount" content="193">
+<meta itemprop="wordCount" content="200">
 <meta itemprop="keywords" content="" /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="क्रमः"/>
-<meta name="twitter:description" content="प्रस्तुतौ मुख्यध्येयम्  markdown सञ्चिकाभिः (ततश् च ) प्रस्तुतिर् इष्यते ग्रन्थानाम्। तेन, जनितानां markdown सञ्चिकानाम् hugo इत्यादिभिः परीक्षणम् इष्यते।  पादटिप्पन्यः   footnotes-example   पुस्तकेष्व् एवम् पादटिप्पनीः पृष्ठपादेषु स्थाप्येरन्। नैवम् अत्र। उचितस्थानेषु प्रापणीयाः। यथाऽत्र - (१) इत्यस्य सम्बन्ध आदिमश्लोकेनास्ति। तावत् तत्रैव स्थापनीयम्। न कदाचिद् अपि पादटिप्पनीभिर् वाक्यं छिद्येत - यथाऽत्र &ldquo;तत्र प्रवृत्तिप्रयोजनो विधि:-(४) सन्ध्याेश्च&rdquo; इत्यादिकं वाक्यं छिन्नम्। तद् वाक्यखण्डम् अग्रे सारयतु। तत्सम्बद्धाम् अपि ४. आप० ध० १.३०.८. इति पादटिप्पनीम्।"/>
+<meta name="twitter:description" content="प्रस्तुतौ मुख्यध्येयम्  markdown सञ्चिकाभिः (ततश् च ) प्रस्तुतिर् इष्यते ग्रन्थानाम्। तेन, जनितानां markdown सञ्चिकानाम् hugo इत्यादिभिः परीक्षणम् इष्यते।  पादटिप्पन्यः   footnotes-example   पुस्तकेष्व् एवम् पादटिप्पनीः पृष्ठपादेषु स्थाप्येरन्। नैवम् अत्र। उचितस्थानेषु प्रापणीयाः - यथा paragraph-अन्ते।
+यथाऽत्र दर्शिते चित्रे - (१) इत्यस्य सम्बन्ध आदिमश्लोकेनास्ति। तावत् तत्रैव स्थापनीयम्।
+न कदाचिद् अपि पादटिप्पनीभिर् वाक्यं छिद्येत - यथाऽत्र दर्शिते चित्रे &ldquo;तत्र प्रवृत्तिप्रयोजनो विधि:-(४) सन्ध्याेश्च&rdquo; इत्यादिकं वाक्यं छिन्नम्। तद् वाक्यखण्डम् अग्रे सारयतु। तत्सम्बद्धाम् अपि ४."/>
 
       
     
@@ -214,7 +220,9 @@
 </figure>
 
 
-<p>पुस्तकेष्व् एवम् पादटिप्पनीः पृष्ठपादेषु स्थाप्येरन्। नैवम् अत्र। उचितस्थानेषु प्रापणीयाः। यथाऽत्र - (१) इत्यस्य सम्बन्ध आदिमश्लोकेनास्ति। तावत् तत्रैव स्थापनीयम्। न कदाचिद् अपि पादटिप्पनीभिर् वाक्यं छिद्येत - यथाऽत्र &ldquo;तत्र प्रवृत्तिप्रयोजनो विधि:-(४) सन्ध्याेश्च&rdquo; इत्यादिकं वाक्यं छिन्नम्। तद् वाक्यखण्डम् अग्रे सारयतु। तत्सम्बद्धाम् अपि <code>४. आप० ध० १.३०.८.</code> इति पादटिप्पनीम्।</p>
+<p>पुस्तकेष्व् एवम् पादटिप्पनीः पृष्ठपादेषु स्थाप्येरन्। नैवम् अत्र। उचितस्थानेषु प्रापणीयाः - यथा paragraph-अन्ते।</p>
+<p>यथाऽत्र दर्शिते चित्रे - (१) इत्यस्य सम्बन्ध आदिमश्लोकेनास्ति। तावत् तत्रैव स्थापनीयम्।</p>
+<p>न कदाचिद् अपि पादटिप्पनीभिर् वाक्यं छिद्येत - यथाऽत्र दर्शिते चित्रे &ldquo;तत्र प्रवृत्तिप्रयोजनो विधि:-(४) सन्ध्याेश्च&rdquo; इत्यादिकं वाक्यं छिन्नम्। तद् वाक्यखण्डम् अग्रे सारयतु। तत्सम्बद्धाम् अपि <code>४. आप० ध० १.३०.८.</code> इति पादटिप्पनीम्।</p>
 <p>पादटिप्पनीनां प्रस्तुतिर् एवम् पङ्तिश  इष्यते -</p>
 <pre><code>- २. दक्षस्मृ० अ० २ श्लो २९ 'यदन्यत् कुरुते कर्म न तस्य फलभाभवेत् । इति तस्योत्तरार्धम् ।
 - ३. गौ० ध० २१. ४.&quot;अशुचेर्द्विजाती&quot;ति. घ. पु
@@ -302,7 +310,7 @@ HODAI
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      <a href=""><img src=""> Built </a> on 2021 Aug 18 01:01:18 UTC. (<a href="http://google.com/search?q=01%3a01%3a18%20UTC to IST">IST</a>)
+      <a href=""><img src=""> Built </a> on 2021 Aug 18 01:07:19 UTC. (<a href="http://google.com/search?q=01%3a07%3a19%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
