deploy: af6836290e4662157961fda7a52059ac03401211

--- a/groups/hindu-vidyA/index.html
+++ b/groups/hindu-vidyA/index.html
@@ -210,7 +210,7 @@
 <li>One should be free to <strong>harshly and clearly criticize ideas</strong> - without getting to the person proposing them. No need to take this personally.</li>
 </ul>
 <h2 id="stock-welcome-messages">Stock welcome messages</h2>
-<p>नमस्काराः! हिन्दुपर-विद्योपासनायै काचिद् इयं धारा सृष्टा (<a href="https://groups.google.com/g/hindu-vidya">google groups</a>) । व्यक्तित्व-वैध्याद् ध्येय-वैविध्याच् च नालं समूहेनैकेन वर्तयितुम् बहुमुखं विद्योपासनम् इति। अग्रे कथं वर्धेतेति न जाने - सद्यस् तु निर्बाधं स्वस्य प्रश्नान् प्रष्टुम् उपयोगाय भवति - ननु युष्मादृशैः पूर्वम् अपि मम ज्ञानं वर्धितम्। यावद् युष्माकम् भाराय न भविष्यति, तावद् इतः सन्देशान् लभध्वम् , यथावकाशं यथाज्ञानं चोत्तरैर् अनुगृह्णन्तु च।</p>
+<p>नमस्काराः! हिन्दुपर-विद्योपासनायै काचिद् इयं धारा सृष्टा (<a href="https://groups.google.com/g/hindu-vidya">google groups</a>) । व्यक्तित्व-वैध्याद् ध्येय-वैविध्याच् च नालं समूहेनैकेन वर्तयितुम् बहुमुखं विद्योपासनम् इति। अग्रे कथं वर्धेतेति न जाने - सद्यस् तु निर्बाधं स्वस्य प्रश्नान् प्रष्टुम् उपयोगाय भवति (<a href="https://groups.google.com/g/hindu-vidya/c/-Zac55JJdXk">उदाहरणम्</a>) - ननु युष्मादृशैः पूर्वम् अपि मम ज्ञानं वर्धितम्। यावद् युष्माकम् भाराय न भविष्यति, तावद् इतः सन्देशान् लभध्वम् , यथावकाशं यथाज्ञानं चोत्तरैर् अनुगृह्णन्तु च।</p>
 
   </div>
 </article>
@@ -267,7 +267,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      <a href=""><img src=""> Built </a> on 2021 Aug 28 09:24:40 UTC. (<a href="http://google.com/search?q=09%3a24%3a40%20UTC to IST">IST</a>)
+      <a href=""><img src=""> Built </a> on 2021 Aug 28 09:34:28 UTC. (<a href="http://google.com/search?q=09%3a34%3a28%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
