deploy: d9f96ffb085d3908110f39dbb54fc8bde97cbbcc

--- a/groups/hindu-vidyA/index.html
+++ b/groups/hindu-vidyA/index.html
@@ -200,13 +200,13 @@
 <h3 id="why-another-mail-stream">Why another mail stream?</h3>
 <ul>
 <li>True, there are other email streams with similarly broad goals such as bhAratIya-vidvat-pariShat and Indology. But, as of this date, neither is explicitly pro hindu-interests, leading to some confusion and conflict (BVP examples: <a href="https://groups.google.com/g/bvparishat/c/wcbrBGchR-E">goal clarity thread</a>, <a href="https://groups.google.com/g/bvparishat/c/m0WsHOqu39M/m/d7ky6VRMAAAJ">M Deshpande leaving BVP</a> &hellip;) arising out of mismatched expectations.</li>
-<li>Natural diversity in personality profiles and accepted norms lead to conflict and inefficiency in large groups (BVP Examples - <a href="https://groups.google.com/g/bvparishat/c/m0WsHOqu39M/m/o_4SEVlVAAAJ">Unsuccessful demands</a> for expulsion of members, <a href="https://groups.google.com/g/bvparishat/c/m0WsHOqu39M/m/cA7bwBJUAAAJ">complaints about &ldquo;language&rdquo;</a>, <a href="https://groups.google.com/g/bvparishat/c/Oa1JM_7ppE4/m/n9GxUBjfAAAJ">moderation and inconvenience</a> of members with certain codes for politeness).</li>
+<li>Natural diversity in personality profiles and accepted norms lead to conflict and inefficiency in large groups (BVP Examples - Unsuccessful demands <a href="https://groups.google.com/g/bvparishat/c/m0WsHOqu39M/m/o_4SEVlVAAAJ">1</a>, <a href="https://groups.google.com/g/bvparishat/c/n-E8zXKBnNM/m/Y3HwjYZqAAAJ">2</a> for expulsion of members, <a href="https://groups.google.com/g/bvparishat/c/m0WsHOqu39M/m/cA7bwBJUAAAJ">complaints about &ldquo;language&rdquo;</a>, <a href="https://groups.google.com/g/bvparishat/c/Oa1JM_7ppE4/m/n9GxUBjfAAAJ">moderation and inconvenience</a> of members with certain codes for politeness, <a href="https://groups.google.com/g/bvparishat/c/m0WsHOqu39M/m/eJIri-u7AwAJ">burden of moderating large groups</a>).</li>
 </ul>
 <h2 id="posting-rules">Posting rules</h2>
 <p>No spam. Don&rsquo;t keep sending essentially the same message repeatedly in different threads. (BVP examples: <a href="https://groups.google.com/g/bvparishat/search?q=vAk%20yoga">BVK&rsquo;s vAk yoga</a>, <a href="https://groups.google.com/g/bvparishat/search?q=Maheshwara%20sutras">Achyut&rsquo;s mAheshwara sUtras</a>)</p>
 <p>Polite communication with a couple of caveats:</p>
 <ul>
-<li><strong>&ldquo;No first strike&rdquo;</strong> principle. If someone crosses the line, one should not be blamed for responding in the same manner.</li>
+<li><strong>&ldquo;No first strike&rdquo;</strong> principle. If someone crosses the line, one should not be blamed for responding in the same manner (BVP example: <a href="https://groups.google.com/g/bvparishat/c/m0WsHOqu39M/m/Xmoxf0k9AAAJ">&ldquo;haters&rdquo;</a>).</li>
 <li>One should be free to <strong>harshly and clearly criticize ideas</strong> - without getting to the person proposing them. No need to take this personally.</li>
 </ul>
 <h2 id="stock-welcome-messages">Stock welcome messages</h2>
@@ -267,7 +267,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      <a href=""><img src=""> Built </a> on 2021 Aug 28 09:34:28 UTC. (<a href="http://google.com/search?q=09%3a34%3a28%20UTC to IST">IST</a>)
+      <a href=""><img src=""> Built </a> on 2021 Aug 28 11:49:09 UTC. (<a href="http://google.com/search?q=11%3a49%3a09%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
