--- a/groups/hindu-vidyA/index.html
+++ b/groups/hindu-vidyA/index.html
@@ -189,7 +189,7 @@
   <div id="post_content">
   <h2 id="intro">Intro</h2>
 <ul>
-<li>Hindu vidyA is an <a href="https://groups.google.com/g/hindu-vidya/">email stream</a> to facilitate scholarship which aims to further Hindu interests.</li>
+<li>Hindu vidyA is an <a href="https://groups.google.com/g/hindu-vidya/">email stream</a> to facilitate scholarship which aims to further Hindu interests (including Hindu dominance in India).</li>
 <li>Target engagement:
 <ul>
 <li>People who profess to further Hindu interests - whatever their views.</li>
@@ -267,7 +267,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      <a href=""><img src=""> Built </a> on 2021 Aug 28 11:49:09 UTC. (<a href="http://google.com/search?q=11%3a49%3a09%20UTC to IST">IST</a>)
+      <a href=""><img src=""> Built </a> on 2021 Aug 29 07:04:37 UTC. (<a href="http://google.com/search?q=07%3a04%3a37%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
